# words

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.rst  bower.json  clean.sh  cleanjs.sh  db_env_prod.sh.tpl  deploy.sh  docker.env  entrypoint.sh  env.sh  env_custom.sh.tpl  env_secrets.sh.tpl  eslint.sh  install.sh  package.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini  webpack.config.js
.github/workflows/: db_backup.yaml  deployment.yaml  destruction.yaml  reusable_restart_app.yaml  reusable_test.yaml  test.yaml  update_github_actions.yaml
deployment/: configmap.yaml  deployment.yaml  ingress_backend.yaml  ingress_frontend.yaml  service_backend.yaml  service_frontend.yaml
frontend/: Dockerfile  env.sh  eslint.config.mjs  index.html  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.vue  axios-augment.d.ts  axios.ts  env.d.ts  helpers.ts  main.ts  modules.d.ts  router.ts  toast.ts  types.ts
ios/: .gitignore
ios/WordsStudyApp/: APIService.swift  ContentView.swift  Info.plist  LearnView.swift  LoginView.swift  Models.swift  StudyView.swift  WordsStudyAppApp.swift
ios/WordsStudyApp.xcodeproj/: project.pbxproj
scripts/: run_management_command_interactive_prod.sh  run_management_command_prod.sh  run_shell_prod.sh  update_frequency_list.py
src/: manage.py
src/templates/: anki_export.html  base.html  home.html  language.html  text.html  texts.html  words.html
src/words/: __init__.py  apps.py  initial_settings.py  settings.py  urls.py  (+2 more)
to_rewrite/: .bowerrc
words_project/: manage.py
(+111 files in other folders)
